// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package pb;

import "proto/base.proto";
import "proto/user.proto";

option go_package = "proto/pb;proto";

message LoginRequest{
    string username =1;
}

message LoginResponse{
    User user = 1;
    string token =2;
}

message RefreshTokenResponse{
    string token = 1;
}

service AuthService {
  rpc Login ( LoginRequest ) returns ( LoginResponse );

  rpc Logout ( Empty ) returns ( Empty );

  rpc Info ( Empty ) returns ( User );

  rpc RefreshToken ( Empty ) returns ( RefreshTokenResponse );
}
